--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
 	<link rel="stylesheet" href="main.css">
-	<link rel="stylesheet" href="owl/owl.carousel.min.css">
-	<link rel="stylesheet" href="owl/owl.theme.default.min.css">
+	<link rel="stylesheet" href="OwlCarousel2-2.3.4/owl/owl.carousel.min.css">
+	<link rel="stylesheet" href="OwlCarousel2-2.3.4/owl/owl.theme.default.min.css">
 	<link rel="stylesheet" href="responsive.css">
 
 
@@ -82,8 +82,8 @@
 	</div>
 
 	<script src="https://kit.fontawesome.com/49c41b7eb1.js" crossorigin="anonymous"></script>
-	<script src="owl/jquery.min.js"></script>
-	<script src="owl/owl.carousel.min.js"></script>
-	<script src="owl/setup.js"></script>
+	<script src="OwlCarousel2-2.3.4/owl/jquery.min.js"></script>
+	<script src="OwlCarousel2-2.3.4/owl/owl.carousel.min.js"></script>
+	<script src="OwlCarousel2-2.3.4/owl/setup.js"></script>
 </body>
 </html>
